email-services/geapp/src/main/kustomize/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: email-services
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: ""
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/connection-proxy-header: ""

spec:
  rules:
    - host: lan.fieg.com.br
      http:
        paths:
          - path: /email-services
            backend:
              serviceName: email-services
              servicePort: 8080
